fix: align email sign up section

--- a/app/scss/_footer.scss
+++ b/app/scss/_footer.scss
@@ -1,5 +1,6 @@
 .footer {
   background-color: $bg-footer;
+  padding-top: 250px;
   padding-bottom: 2px !important; // to give credit to frontend mentor
 
   &__logo {
