--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -43,6 +43,16 @@ body {
       margin: 0 auto;
     }
 
+    &--x {
+      padding-right: 1.5rem;
+      padding-left: 1.5rem;
+
+      @include breakpoint-up(large) {
+        padding-right: 4.375rem;
+        padding-left: 4.375rem;
+      }
+    }
+
   }
 
   .btn__cta {
