--- a/app/scss/_sign_up.scss
+++ b/app/scss/_sign_up.scss
@@ -1,4 +1,5 @@
 .sign-up {
+  transform: translateY(50%);
 
   &__card {
     background-color: $bg-intro;
